
	* bin/cygport.in (cygautoreconf),
	  lib/gnome2.cygclass (gnome2_autoreconf):
	Prevent automake from installing COPYING and INSTALL where not
	originally included.

	* bin/cygport.in (src_test, pkg_diff):
	Handle various Makefile names.

	* bin/prep_libtool_modules.sh:
	Ignore ../bin/ when looking for module versioning.
	Support Apache2 .so modules.

	* lib/gtk2-perl.cygclass (gtk2_perl_install):
	Add missing perl_postinst.

	* data/cygport.conf, data/mirrors:
	Fix headers.

	* lib/perl.cygclass:
	Check for Module::Build before use.

	* bin/cygport.in, lib/xorg.cygclass:
	Provide universal default {C,CPP,CXX,F77,GCJ}FLAGS and MAKEOPTS.

	* bin/dodoc:
	Don't overwrite already-installed files.

	* CYGWIN-PATCHES/README, CYGWIN-PATCHES/setup.hint,
	  README, bin/cygport.in (__prepstrip):
	Do not strip Mono assemblies during postinstall.
	Require binutils for objdump and strip.

	* bin/cygport.in (cygautoreconf):
	Touch README as well to prevent automake failure.

	* CYGWIN-PATCHES/README, TODO, bin/Makefile.am, bin/cygport.in, 
	  data/Makefile.am, data/cygport.conf, data/mirrors,
	  data/sample.cygport, lib/gnome.org.cygclass, lib/perl.cygclass,
	  lib/gtk2-perl.cygclass, lib/kde3.cygclass, lib/ruby-gnome2.cygclass:
	Implement mirror:// SRC_URIs and use throughout.

	* lib/gnome2.cygclass (gnome2_autoreconf):
	Touch files whose presence is required by automake.

	* lib/gst-plugins0.8.cygclass:
	Support gst-monkeysaudio.

	* CYGWIN-PATCHES/README, configure.ac:
	Post-release version bump.

*** 0.2.4 ***

	* ChangeLog, NEWS:
	Tag for release.

	* lib/xorg.cygclass:
	Rename xorg-font-*-{75,100}dpi to xorg-font-*-dpi{75,100}.

	* Makefile.am:
	Since we refer to the README in help, have make install it.

	* lib/kde3.cygclass (kde3_install):
	Install component-specific README files.

	* lib/gst-plugins0.8.cygclass:
	Build smoothwave with the base plugins, as it has no external deps.
	The flag --disable-gdk-pixbuf-loader is broken and defaults to no, so 
	don't pass it.
